# hello_vfs

./: CMakeLists.txt  README.md  cross-build.sh
einit/: CMakeLists.txt
einit/src/: init.yaml.in  security.psl.in
hello/: CMakeLists.txt
hello/src/: hello.c
resources/edl/: Hello.edl
